Update Major V0.1.5 - 28.8.2022

Added
--------------------------------------------------------------------------------------------
- Finally added persistent settings in the form of the settings.json file.
    - It will also update each time you change a setting in app
    - This will allow easier backups for settings while updating
- Uploaded a new updater
    - It has a graphical interface (although basic), that provides more information easier 
    - Also made a new branch for updater development




Update Minor V0.1.4 - 20.8.2022

Fixed
--------------------------------------------------------------------------------------------
- Removed a debug print.
- Removed reduntant width and height from MainFile.py
- Set default screencapture position to 0x0 to avoid confusion.




Update Minor V0.1.35 - 8.8.2022

Added
--------------------------------------------------------------------------------------------
- Rebranded the software with a new logo and updated the readme.
- Removed example video as it is not required.




Update Minor V0.1.3 - 8.8.2022

Added
--------------------------------------------------------------------------------------------
- Added a variable in MainFile.py
    - disableLaneAssistWhenIndicating = True




Update Minor V0.1.2 - 8.8.2022

Fixed
--------------------------------------------------------------------------------------------
- Fixed the installer installing itself




Update Major V0.1.1 - 8.8.2022

Added
--------------------------------------------------------------------------------------------
- Added an installation and update script : updater.py
    - This also required me to restructure the program
    - Also required to add a version.txt for automatic updates
- New lane detection option : useGPUByDefault = True
    - Starts the lane detection with gpu mode enabled by default
- Added an indicator message, to notify the user of indicator state, useful when it might be stuck. 

Fixed