@@ -1,1 +1,1 @@
-0.14,20.08.2022
+0.15,20.08.2022
